Done loc vs iloc page

--- a/posts/2023-10-04-building-machine-learning-powered-applications/index.qmd
+++ b/posts/2023-10-04-building-machine-learning-powered-applications/index.qmd
@@ -3,6 +3,7 @@ title: "Building machine learning powered applications"
 author: "Ha Truong"
 date: "2023-10-04"
 categories: [book]
+draft: true
 ---
 
 
